# travellers-app

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  comment.cpp  comment.hpp  constants.hpp  database.cpp  database.hpp  date.cpp  date.hpp  destination.cpp  destination.hpp  io_handler.cpp  io_handler.hpp  main.cpp  travellers_app.cpp  travellers_app.hpp  trip.cpp  trip.hpp  user.cpp  user.hpp
db/: destinations.db  users.db
db/users/: user1.db  user2.db
html/: annotated.html  classComment-members.html  classComment.html  classDatabase-members.html  classDatabase.html  classDate-members.html  classDate.html  classDestination-members.html  classDestination.html  classIOHandler-members.html  classIOHandler.html  classTravellersApp-members.html  classTravellersApp.html  classTrip-members.html  classTrip.html  classUser-members.html  classUser.html  classes.html  comment_8hpp_source.html  constants_8hpp_source.html  database_8hpp_source.html  date_8hpp_source.html  destination_8hpp_source.html  files.html  functions.html  functions_func.html  index.html  io__handler_8hpp_source.html  md_README.html  menudata.js  pages.html  travellers__app_8hpp_source.html  trip_8hpp_source.html  user_8hpp_source.html
latex/: annotated.tex  classComment.tex  classDatabase.tex  classDate.tex  classDestination.tex  classIOHandler.tex  classTravellersApp.tex  classTrip.tex  classUser.tex  index.tex  md_README.tex  refman.aux  refman.fdb_latexmk  refman.fls  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
lib/: string.cpp  string.hpp  vector.hpp
(+35 files in other folders)
